// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSDocs Package transformer for jsdocs should work with an empty package.json 1`] = `
Object {
  "devDependencies": Object {
    "jsdoc-to-markdown": "^4.0.1",
  },
  "husky": Object {
    "hooks": Object {
      "commit-msg": "npm run doc && git add API.md",
    },
  },
  "metapak": Object {
    "data": Object {
      "files": "yolo.js",
    },
  },
  "scripts": Object {
    "doc": " echo \\"# API\\" > API.md; jsdoc2md yolo.js >> API.md",
  },
}
`;

exports[`JSDocs Package transformer for jsdocs should work with an existing package.json 1`] = `
Object {
  "devDependencies": Object {
    "jsdoc-to-markdown": "^4.0.1",
  },
  "husky": Object {
    "hooks": Object {
      "commit-msg": "npm run doc && git add API.md",
    },
  },
  "metapak": Object {
    "data": Object {
      "files": "yolo.js",
      "ignore": Array [
        "API.md",
      ],
    },
  },
  "scripts": Object {
    "doc": " echo \\"# API\\" > API.md; jsdoc2md yolo.js >> API.md",
  },
}
`;
